[brief] Updates css styles.
[detailed]

--- a/docs/stylesheets/codehilite.css
+++ b/docs/stylesheets/codehilite.css
@@ -5,8 +5,8 @@
 */
 
 .md-typeset code {
-  background-color: #424242;
-  color: #F5F5F5;
+  background-color: #2b2b2b;
+  color: #adadad;
   margin: 0;
   padding: 0.07353em 0.29412em;
   box-shadow: none;
